@@ -1,0 +1,42 @@
+/*
+ *  Copyright 2025 the original author or authors.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+
+package org.spockframework.smoke.issues
+
+import spock.lang.Issue
+import spock.lang.Specification
+
+@Issue("https://github.com/spockframework/spock/issues/2080")
+class StackFrameReproducer extends Specification {
+
+  def "this should compile and run without errors"() {
+    when:
+    def a = ""
+
+    then:
+    nop()
+
+    when:
+    nop()
+
+    then:
+    nop()
+
+    cleanup:
+    nop()
+  }
+
+  void nop() {
+  }
+}
